# AMP

./: CMakeLists.txt  changelog.md  package.xml  readme.md  version.h.in
cmake/: QNXToolchain.cmake
example/: map_log.h  read.cpp  write.cpp
include/: map_io.h  version.h
offline_debug/: matplotlibcpp.h  offline_debug.cpp  read_csv_data.h
offline_debug/data_front_optimization/11.2/20240102_145635_200m/: HHT_VersionInfo.sh  label.json  operationRecode.csv  tagSta.csv
offline_debug/data_front_optimization/11.2/20240115_134401_S形行驶+内切过弯，学习/: HHT_VersionInfo.sh  label.json  labelCsv.csv  operationRecode.csv
offline_debug/data_front_optimization/11.2/HA1_68_2023-11-24-14-51-37/: 2023-11-24-14-48-41locplan.csv  map1_2023-11-24-14-48-38-planning.csv
offline_debug/data_front_optimization/11.2/HA1_68_2023-11-29-13-47-22/: 2023-11-29-13-46-39locplan.csv  2023-11-29-13-46-39plan1.csv  2023-11-29-13-46-39road.csv  map4_2023-11-29-13-46-35-planning.csv  map4_2023-11-29-13-46-35.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_68_2023-11-29-16-15-25/: 2023-11-29-16-14-59locplan.csv  2023-11-29-16-14-59plan1.csv  map1_2023-11-29-16-14-55-planning.csv  map1_2023-11-29-16-14-55.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-22-14-25-57/: 2023-12-22-14-25-40locplan.csv  map1_2023-12-22-14-25-37-planning.csv  map1_2023-12-22-14-25-37.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-22-14-38-1/: 2023-12-22-14-25-40locplan.csv  2023-12-22-14-25-40plan1.csv  2023-12-22-14-37-19locplan.csv  map1_2023-12-22-14-25-37-planning.csv  map1_2023-12-22-14-37-16-planning.csv  map1_2023-12-22-14-37-16.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-22-14-49-38/: 2023-12-22-14-37-19locplan.csv  2023-12-22-14-37-19plan1.csv  2023-12-22-14-49-29locplan.csv  2023-12-22-14-49-29plan1.csv  2023-12-22-14-49-29road.csv  map1_2023-12-22-14-37-16-planning.csv  map1_2023-12-22-14-49-25-planning.csv  map1_2023-12-22-14-49-25.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-27-14-18-58/: 2023-12-27-14-03-38locplan.csv  2023-12-27-14-03-38plan1.csv  2023-12-27-14-03-38road.csv  2023-12-27-14-18-37locplan.csv  2023-12-27-14-18-37plan1.csv  2023-12-27-14-18-37road.csv  map1_2023-12-27-14-18-33-planning.csv  map1_2023-12-27-14-18-33.csv  map1_2023-12-27-14-3-33-planning.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-27-14-55-19/: 2023-12-27-14-55-03locplan.csv  2023-12-27-14-55-03plan1.csv  map1_2023-12-27-14-55-0-planning.csv  map1_2023-12-27-14-55-0.csv  maps.csv
offline_debug/data_front_optimization/11.2/HA1_707_2023-12-29-14-47-30/: 2023-12-27-14-55-03locplan.csv  2023-12-27-14-55-03road.csv  2023-12-29-14-27-08locplan.csv  2023-12-29-14-27-08plan1.csv  2023-12-29-14-27-08road.csv  2023-12-29-14-47-16locplan.csv  2023-12-29-14-47-16plan1.csv  2023-12-29-14-47-16road.csv  map1_2023-12-27-14-55-0-planning.csv  map1_2023-12-29-14-27-4-planning.csv  map1_2023-12-29-14-27-4.csv  map2_2023-12-29-14-47-12-planning.csv  map2_2023-12-29-14-47-12.csv  maps.csv
offline_debug/data_front_optimization/11.2/hpa_routes01/: 2023-12-29-15-13-08plan1.csv  2023-12-29-15-24-19plan1.csv  2023-12-29-15-24-19road.csv  2023-12-29-15-24-21plan1.csv  2024-01-02-10-48-41plan1.csv  2024-01-02-10-48-41road.csv  2024-01-08-10-18-43locplan.csv  2024-01-08-10-18-43plan1.csv  2024-01-08-10-18-43road.csv  2024-01-08-10-35-05plan1.csv  2024-01-08-10-35-05road.csv  2024-01-08-10-35-06locplan.csv  A_hou.csv  A_qian.csv  DataPoint.csv  Get_Corners_Points.csv  b_hou.csv  b_qian.csv  hou_poly_numes.csv  map10_2023-12-29-15-12-59-planning.csv  map10_2023-12-29-15-24-10-planning.csv  map10_2024-1-2-10-48-36-planning.csv  map10_2024-1-4-13-50-2.csv  map11_2024-1-4-13-38-22.csv  map1_2023-12-22-10-24-42.csv  map3_2023-12-22-13-21-28.csv  map4_2024-1-8-10-18-36-planning.csv  map4_2024-1-8-10-35-0-planning.csv  map4_2024-1-8-10-35-0.csv  map6_2024-1-4-10-55-49.csv  map7_2024-1-4-11-24-10.csv  map9_2023-12-28-14-21-24.csv  maps.csv  qian_poly_numes.csv
offline_debug/data_front_optimization/11.2/hpa_routes1.11_01/: 2024-01-10-17-26-09locplan.csv  2024-01-10-17-26-09plan1.csv  2024-01-10-17-26-09road.csv  2024-01-11-13-23-49plan1.csv  2024-01-11-13-23-49road.csv  2024-01-11-13-23-50locplan.csv  A_hou.csv  A_qian.csv  DataPoint.csv  Get_Corners_Points.csv  b_hou.csv  b_qian.csv  hou_poly_numes.csv  map1_2024-1-10-17-26-5-planning.csv  map1_2024-1-11-13-23-46-planning.csv  map1_2024-1-11-13-23-46.csv  maps.csv  qian_poly_numes.csv
offline_debug/data_front_optimization/11.2/hpa_routes2014.01.15.01/: 2024-01-12-14-56-17locplan.csv  2024-01-12-15-37-27locplan.csv  2024-01-12-15-37-27plan1.csv  2024-01-12-15-56-26plan1.csv  2024-01-12-15-56-26road.csv  2024-01-12-16-14-45plan1.csv  2024-01-12-16-38-35road.csv  2024-01-12-17-14-03road.csv  data_point_in.csv  map1_2024-1-12-15-10-20-planning.csv  map2_2024-1-12-17-13-54.csv  maps.csv  obs_comefrom_Semanticline_input.csv  obstest_rear.csv
offline_debug/data_front_optimization/11.2/hpa_routes2014.01.16.16.21/: map2_2024-1-16-16-3-26.csv  maps.csv
offline_debug/data_front_optimization/11.2/hpa_routes20141.12.05/: 2024-01-12-14-56-17road.csv  data_point_in.csv  map1_2024-1-12-15-37-23-planning.csv  map1_2024-1-12-15-56-20-planning.csv  map2_2024-1-12-16-14-41-planning.csv  map2_2024-1-12-16-38-29-planning.csv  map2_2024-1-12-16-38-29.csv  maps.csv  obs_comefrom_Semanticline_input.csv  obstest_rear.csv
offline_debug/data_front_optimization/11.2/hpa_routes2023-12-22/: 2023-12-29-15-13-08road.csv  map10_2023-12-29-15-12-59-planning.csv  (+7 more)
offline_debug/data_front_optimization/tda4_to_pc/: A_front.csv  A_rear.csv  b_front.csv  b_rear.csv  front_poly_numes.csv  obstest_rear.csv  plan1point.csv  rear_poly_numes.csv
scripts/: build_pc.sh
src/: map_io.cpp
src/path_process/: .clang-format  Large_Conve.h  RangeTree.h  bspline.h  common.h  emst.hpp  lbfgs.hpp  main.cpp  path_process.cc  path_process.h  path_process_api.h  quickhull.h  sampler.h  write_data_in_csv.h
(+195 files in other folders)
